@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2015-07-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/render.c (DrawAffineImage): Fix problem with negative x
+offset.  Resolves SourceForge issue #306 &quot;gm fails to convert svg
+to jpeg if svg has images with negative coordinates&quot;.</li>
+<li>magick/pixel_cache.c (ReadCachePixels): Add checks for integer
+overflows.</li>
+</ul>
+</blockquote>
 <p>2015-07-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
